<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.scoreapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/volleyball5"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/teamsStats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="@dimen/margin"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standardMargin"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:text="@string/home_team"
                android:textAllCaps="true"
                android:textColor="@color/textColor"
                android:textSize="@dimen/standardTextSize"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standardMargin"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:text="@string/away_team"
                android:textAllCaps="true"
                android:textColor="@color/textColor"
                android:textSize="@dimen/standardTextSize"
                android:textStyle="bold"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >


                <LinearLayout
                android:id="@+id/teamStatsA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="40"
                android:orientation="vertical">
                    <TextView
                        android:id="@+id/teamStatsAAttack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/margin"
                        android:text="@string/numberValue"
                        android:textSize="@dimen/mediumTextSize"
                        />
                    <TextView
                        android:id="@+id/teamStatsABlock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/margin"
                        android:text="@string/numberValue"
                        android:textSize="@dimen/mediumTextSize"/>
                    <TextView
                        android:id="@+id/teamStatsAAce"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/margin"
                        android:text="@string/numberValue"
                        android:textSize="@dimen/mediumTextSize"
                        />
                    <TextView
                        android:id="@+id/teamStatsAOppError"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/margin"
                        android:text="@string/numberValue"
                        android:textSize="@dimen/mediumTextSize"
                        />
                    <TextView
                        android:id="@+id/teamStatsATotalPoints"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/margin"
                        android:text="@string/numberValue"
                        android:textSize="@dimen/mediumTextSize"
                       />


                </LinearLayout>
                <LinearLayout
                    android:id="@+id/teamStatsB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="30"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/teamStatsAttack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/attack"
                        android:textSize="@dimen/mediumTextSize"

                        />
                    <TextView
                        android:id="@+id/teamStatsBlock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/block"
                        android:textSize="@dimen/mediumTextSize"
                        />
                    <TextView
                        android:id="@+id/teamStatsAce"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/ace"
                        android:textSize="@dimen/mediumTextSize"
                        />
                    <TextView
                        android:id="@+id/teamStatsOppError"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/opp_error"
                        android:textSize="@dimen/mediumTextSize"
                        />
                    <TextView
                        android:id="@+id/teamStatsTotalPoints"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/total"
                        android:textSize="@dimen/mediumTextSize"
                        />



                </LinearLayout>
                <LinearLayout
                    android:id="@+id/teamStatsC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/teamStatsBAttack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/margin"
                        android:text="@string/numberValue"
                        android:textSize="@dimen/mediumTextSize"
                       />
                    <TextView
                        android:id="@+id/teamStatsBBlock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/margin"
                        android:text="@string/numberValue"
                        android:textSize="@dimen/mediumTextSize"
                        />
                    <TextView
                        android:id="@+id/teamStatsBAce"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/margin"
                        android:text="@string/numberValue"
                        android:textSize="@dimen/mediumTextSize"
                        />
                    <TextView
                        android:id="@+id/teamStatsbOppError"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/margin"
                        android:text="@string/numberValue"
                        android:textSize="@dimen/mediumTextSize"
                        />
                    <TextView
                        android:id="@+id/teamStatsBTotalPoints"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/margin"
                        android:text="@string/numberValue"
                        android:textSize="@dimen/mediumTextSize"
                        />


                </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="35"
            >
            <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin"
            android:onClick="back"
            android:text="@string/back"
            />

        </LinearLayout>
    </LinearLayout>
</ScrollView>